[gd_scene load_steps=8 format=3 uid="uid://baqwa2wch57ys"]

[ext_resource type="Script" uid="uid://cva4ol3he05eq" path="res://scripts/bed.gd" id="1_xqjo8"]
[ext_resource type="Texture2D" uid="uid://wqnuscxx2see" path="res://assets/Circle Building/Bed.png" id="2_fqty4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pogk5"]
radius = 126.0
height = 436.0

[sub_resource type="Animation" id="Animation_c32mu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xqjo8"]
resource_name = "sleep"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.7764706), Color(0, 0, 0, 0.6), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_2rykw"]
resource_name = "wakeup"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.32941177), Color(0, 0, 0, 0.5529412), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rykw"]
_data = {
&"RESET": SubResource("Animation_c32mu"),
&"sleep": SubResource("Animation_xqjo8"),
&"wakeup": SubResource("Animation_2rykw")
}

[node name="Bed" type="Node2D"]
script = ExtResource("1_xqjo8")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-208, -96)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(208, 96)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_pogk5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="SleepFade" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_2rykw")
}

[node name="Bed" type="Sprite2D" parent="."]
position = Vector2(6, -7)
scale = Vector2(0.36, 0.36)
texture = ExtResource("2_fqty4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-125, 44, 145, 28, 143, -82, -136, -67)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
